--- a/.github/workflows/make.yaml
+++ b/.github/workflows/make.yaml
@@ -10,8 +10,20 @@ on: [push, pull_request]
 # started depends on how many configurations the matrix
 # will produce.
 jobs:
+  sonarCloudTrigger:
+    name: SonarCloud Trigger
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+
   # This is the name of the job - can be whatever.
-  test-matrix:
+  compile:
 
     # Here we tell GitHub that the jobs must be determined
     # dynamically depending on a matrix configuration.
