--- a/.github/workflows/make.yaml
+++ b/.github/workflows/make.yaml
@@ -22,6 +22,22 @@ jobs:
         extensions: 'h,cpp,ino'
         clangFormatVersion: 9
 
+  cpp-unittest:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Get Version
+      run: |
+          cd test/tonella/
+          cmake CMakeLists.txt
+          make googletest
+          make
+    - name: Run
+      run: |
+          cd test/tonella/
+          ./runTests
   cpp-doc:
     runs-on: ubuntu-latest
 
