add several figurines
bee, bunny, cat, cow, donkey, duck, elephant, fox, horse, lion,
monkey, sheep snake

--- a/figurines/bear/bear.yaml
+++ b/figurines/bear/bear.yaml
@@ -1,6 +1,9 @@
 name: bear
+id: 1
 name_tts: Bär
-sound: 
+sound:
     link: "https://www.youtube.com/watch?v=nMXX8XFqxq4"
+    selection:
 song:
     link: "https://www.youtube.com/watch?v=hmyEHUfXfsk"
+    selection:
