--- a/figurines/bunny/bunny.yaml
+++ b/figurines/bunny/bunny.yaml
@@ -1,8 +1,9 @@
 name: bunny
+id: 3
 name_tts: Häschen
-sound: 
+sound:
     link: "https://www.youtube.com/watch?v=WyD_oesdxiI"
     selection: [10, 20]
 song:
     link: "https://www.youtube.com/watch?v=TN6b_eh2I84"
-    selection: null
+    selection:
