--- a/test/tonella/CMakeLists.txt
+++ b/test/tonella/CMakeLists.txt
@@ -17,11 +17,11 @@ link_directories(${EXTERNAL_INSTALL_LOCATION}/lib)
 include_directories("../../src/tonella")
 
 # Link runTests with what we want to test and the GTest and pthread library
-add_executable(runTests tests.cpp)
+add_executable(runTests tests.cpp test_player.cpp test_statemachine.cpp ../../src/tonella/player.cpp ../../src/tonella/statemachine.cpp)
 target_link_libraries(runTests gtest gmock gtest_main pthread)
 
 # Code coverage binary
-add_executable(runTestsCov tests.cpp)
+add_executable(runTestsCov tests.cpp test_player.cpp test_statemachine.cpp ../../src/tonella/player.cpp ../../src/tonella/statemachine.cpp)
 target_link_libraries(runTestsCov gtest gmock gtest_main pthread gcov)
 target_compile_options(runTestsCov PRIVATE "-g")
 target_compile_options(runTestsCov PRIVATE "-fprofile-arcs")
