--- a/figurines/bear/bear.yaml
+++ b/figurines/bear/bear.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=hmyEHUfXfsk"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=dsTJ68_VhyE"
+    selection:
