--- a/figurines/bunny/bunny.yaml
+++ b/figurines/bunny/bunny.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=TN6b_eh2I84"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=sp-hpfoY_yg"
+    selection:
