--- a/figurines/cat/cat.yaml
+++ b/figurines/cat/cat.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=DNCq_4CeDYY"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=-71bsOowe84"
+    selection:
