--- a/figurines/donkey/donkey.yaml
+++ b/figurines/donkey/donkey.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=xuF0AGaUhb8"
     selection: [7, 83]
+story:
+    link: "https://www.youtube.com/watch?v=r2gUcQTDy9k"
+    selection:
