--- a/figurines/elephant/elephant.yaml
+++ b/figurines/elephant/elephant.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=YB8hqFLRb5k"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=daf1eyL8BDM"
+    selection:
