--- a/figurines/fox/fox.yaml
+++ b/figurines/fox/fox.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=6FIqyOdYSvs"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=8QPwBVGdjjg"
+    selection:
