--- a/figurines/horse/horse.yaml
+++ b/figurines/horse/horse.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=-lSndZ7cAgU"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=B1et1zxa1zI"
+    selection:
