--- a/figurines/lion/lion.yaml
+++ b/figurines/lion/lion.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=yxhEQ7ONDjQ"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=i-_Z5VGbExE"
+    selection:
