--- a/figurines/monkey/monkey.yaml
+++ b/figurines/monkey/monkey.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=u_uB1nbLOqE&t=2s"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=I3MLV_wY7UU"
+    selection:
