--- a/figurines/bee/bee.yaml
+++ b/figurines/bee/bee.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=XNWferBsNCw"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=i1DC7TNFhYU"
+    selection:
