--- a/figurines/cow/cow.yaml
+++ b/figurines/cow/cow.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=7IOzLT7A8jQ"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=j4gOU8macKw"
+    selection:
