--- a/figurines/duck/duck.yaml
+++ b/figurines/duck/duck.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=NThaerOW5aI"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=4Ga1rtwRFzU"
+    selection:
