--- a/figurines/sheep/sheep.yaml
+++ b/figurines/sheep/sheep.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=b6K3a_ug9JE"
     selection: [10, 107]
+story:
+    link: "https://www.youtube.com/watch?v=OLdnwUapLWM"
+    selection:
