--- a/figurines/snake/snake.yaml
+++ b/figurines/snake/snake.yaml
@@ -7,3 +7,6 @@ sound:
 song:
     link: "https://www.youtube.com/watch?v=uCHFfU7KBdw"
     selection:
+story:
+    link: "https://www.youtube.com/watch?v=2-qAW9FqiJw"
+    selection:
