add metal songs to figurines

--- a/figurines/bear/bear.yaml
+++ b/figurines/bear/bear.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=dsTJ68_VhyE"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=5V39poP1Hoc"
+    selection:
