--- a/figurines/bee/bee.yaml
+++ b/figurines/bee/bee.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=i1DC7TNFhYU"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=pcM4jRqz5qM"
+    selection:
