--- a/figurines/bunny/bunny.yaml
+++ b/figurines/bunny/bunny.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=sp-hpfoY_yg"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=2giBYnZ4CX4"
+    selection:
