--- a/figurines/cat/cat.yaml
+++ b/figurines/cat/cat.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=-71bsOowe84"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=Zrnu2wb3AIc"
+    selection:
