--- a/figurines/duck/duck.yaml
+++ b/figurines/duck/duck.yaml
@@ -10,3 +10,7 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=4Ga1rtwRFzU"
     selection:
+metal:
+    #link: "https://www.youtube.com/watch?v=2b2WvNqmeDo"
+    link: "https://www.youtube.com/watch?v=hl36PsbTGpw"
+    selection:
