--- a/figurines/horse/horse.yaml
+++ b/figurines/horse/horse.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=B1et1zxa1zI"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=Pi8dtuL9Vzk"
+    selection:
