--- a/figurines/lion/lion.yaml
+++ b/figurines/lion/lion.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=i-_Z5VGbExE"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=6FLE7CNZBiU"
+    selection: [0, 214]
