--- a/figurines/monkey/monkey.yaml
+++ b/figurines/monkey/monkey.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=I3MLV_wY7UU"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=9pH4W9b8upk"
+    selection:
