--- a/figurines/snake/snake.yaml
+++ b/figurines/snake/snake.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=2-qAW9FqiJw"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=W9MrHKmsGxA"
+    selection:
