--- a/figurines/cow/cow.yaml
+++ b/figurines/cow/cow.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=j4gOU8macKw"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=Jag7oTemldY"
+    selection:
