--- a/figurines/donkey/donkey.yaml
+++ b/figurines/donkey/donkey.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=r2gUcQTDy9k"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=_8GVYjjsUhY"
+    selection:
