--- a/figurines/fox/fox.yaml
+++ b/figurines/fox/fox.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=8QPwBVGdjjg"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=NVkRVFEWOjc"
+    selection: [34, 254]
