--- a/figurines/sheep/sheep.yaml
+++ b/figurines/sheep/sheep.yaml
@@ -10,3 +10,6 @@ song:
 story:
     link: "https://www.youtube.com/watch?v=OLdnwUapLWM"
     selection:
+metal:
+    link: "https://www.youtube.com/watch?v=QKPGbEeuywc"
+    selection:
