--- a/figurines/cat/cat.yaml
+++ b/figurines/cat/cat.yaml
@@ -8,7 +8,7 @@ song:
     link: "https://www.youtube.com/watch?v=DNCq_4CeDYY"
     selection:
 story:
-    link: "https://www.youtube.com/watch?v=-71bsOowe84"
+    link: "https://www.youtube.com/watch?v=0RGn1TI8-Lw"
     selection:
 metal:
     link: "https://www.youtube.com/watch?v=Zrnu2wb3AIc"
