--- a/test/tonella/CMakeLists.txt
+++ b/test/tonella/CMakeLists.txt
@@ -15,14 +15,14 @@ include(GoogleTest)
 include_directories(${EXTERNAL_INSTALL_LOCATION}/include)
 link_directories(${EXTERNAL_INSTALL_LOCATION}/lib)
 
-include_directories("../../src/tonella")
+include_directories("../../src/tonella/src")
 
 # Link runTests with what we want to test and the GTest and pthread library
-add_executable(runTests tests.cpp test_player.cpp test_statemachine.cpp ../../src/tonella/player.cpp ../../src/tonella/statemachine.cpp)
+add_executable(runTests tests.cpp test_player.cpp test_statemachine.cpp ../../src/tonella/src/player.cpp ../../src/tonella/src/statemachine.cpp)
 target_link_libraries(runTests gtest gmock gtest_main pthread)
 
 # Code coverage binary
-add_executable(runTestsCov tests.cpp test_player.cpp test_statemachine.cpp ../../src/tonella/player.cpp ../../src/tonella/statemachine.cpp)
+add_executable(runTestsCov tests.cpp test_player.cpp test_statemachine.cpp ../../src/tonella/src/player.cpp ../../src/tonella/src/statemachine.cpp)
 target_link_libraries(runTestsCov gtest gmock gtest_main pthread gcov)
 target_compile_options(runTestsCov PRIVATE "-g")
 target_compile_options(runTestsCov PRIVATE "-fprofile-arcs")
