--- a/figurines/butterfly/butterfly.yaml
+++ b/figurines/butterfly/butterfly.yaml
@@ -1,9 +1,9 @@
 name: butterfly
-id: 25
+id: 27
 name_tts: Schmetterling
 sound:
-    link: 
-    selection:
+    link: "https://www.youtube.com/watch?v=rZ7XKAeCJoI"
+    selection: [24, 34]
 song:
     link: "https://www.youtube.com/watch?v=W23huBDyCms"
     selection:
