--- a/.github/workflows/make.yaml
+++ b/.github/workflows/make.yaml
@@ -55,7 +55,7 @@ jobs:
         path: test/tonella/build/res
 
   cpp-doc:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - name: Checkout
