--- a/.github/workflows/make.yaml
+++ b/.github/workflows/make.yaml
@@ -23,7 +23,7 @@ jobs:
         clangFormatVersion: 9
 
   cpp-unittest:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - name: Checkout
@@ -115,7 +115,7 @@ jobs:
 
     # This is the platform GitHub will use to run our workflow, we
     # pick Windows for no particular reason.
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     # This is the list of steps this job will run.
     steps:
