--- a/test/tonella/CMakeLists.txt
+++ b/test/tonella/CMakeLists.txt
@@ -6,6 +6,7 @@ set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR})
 
 ExternalProject_Add(googletest
     GIT_REPOSITORY https://github.com/google/googletest
+    GIT_TAG main
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTERNAL_INSTALL_LOCATION}
 )
 
