don't pin arduino cli version number

--- a/.github/workflows/make.yaml
+++ b/.github/workflows/make.yaml
@@ -23,7 +23,7 @@ jobs:
         clangFormatVersion: 9
 
   cpp-unittest:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -115,7 +115,7 @@ jobs:
 
     # This is the platform GitHub will use to run our workflow, we
     # pick Windows for no particular reason.
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     # This is the list of steps this job will run.
     steps:
@@ -126,7 +126,7 @@ jobs:
       # We use the `arduino/setup-arduino-cli` action to install and
       # configure the Arduino CLI on the system.
       - name: Setup Arduino CLI
-        uses: arduino/setup-arduino-cli@v1.0.0
+        uses: arduino/setup-arduino-cli@v1
 
       # We then install the platform, which one will be determined
       # dynamically by the build matrix.
